feat: add swagger docs and controller
